New P2p COnnect half done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
 
     //PSync
     implementation files('libs/psync-pc-jar-with-dependencies.jar')
+
+    //chirp
+    implementation 'io.chirp:chirpsdk:3.6.1'
 }
